--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
+    "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.10.0"
   }
