--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
