--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "babel-eslint": "^9.0.0",
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
