--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -42,6 +43,7 @@
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
+    "react-datetime": "^2.16.3",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
