--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
