--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "classnames": "^2.2.6",
     "css-loader": "1.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "eslint-loader": "2.1.1",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
@@ -28,6 +30,7 @@
     "identity-obj-proxy": "3.0.0",
     "ignore-styles": "^5.0.1",
     "jest": "23.6.0",
+    "jest-enzyme": "^7.0.1",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
@@ -52,6 +55,7 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.8.2",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
@@ -95,6 +99,7 @@
     "lint-staged": "^8.1.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
